--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-tensorflow
-opencv-python-headless
+tensorflow==2.17.1
+opencv-python
+matplotlib
 numpy
-keras
-gdown
+streamlit
+scikit-learn
 Pillow
