--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
+streamlit==1.34.0
 tensorflow==2.17.1
-opencv-python
-matplotlib
-numpy
-streamlit
-scikit-learn
-Pillow
+opencv-python-headless==4.9.0.80
+Pillow==10.3.0
+numpy==1.26.4
