--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-streamlit==1.34.0
-tensorflow==2.17.1
-opencv-python-headless==4.9.0.80
-streamlit==1.34.0
+streamlit
 tensorflow==2.17.1
 numpy
-pillow
-requests
+pandas
+opencv-python
