--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-streamlit
+# ✅ BẮT BUỘC: Dành cho Python 3.10.12
+streamlit==1.34.0
 tensorflow==2.17.1
-numpy
-pandas
-opencv-python
+opencv-python-headless==4.9.0.80
+Pillow==10.3.0
+numpy==1.26.4
+requests==2.31.0
